policies/grafana-enforce-folder-for-dashboard/tests/overlays/test03/generated/v1_configmap_vaplibtest-grafana-enforce-folder-for-dashboard-test03.yaml
apiVersion: v1
data:
  test: test
kind: ConfigMap
metadata:
  labels:
    grafana_dashboard: "1"
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test03
  namespace: vaplibtest-grafana-enforce-folder-for-dashboard-test03
