policies/grafana-enforce-folder-for-dashboard/tests/overlays/test03/generated/v1_namespace_vaplibtest-grafana-enforce-folder-for-dashboard-test03.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    vaplib-grafana-enforce-folder-for-dashboard: deny
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test03
